# zigzag-alloc

./: Cargo.toml  LICENSE  README.md
examples/: arena_vec.rs  bounded_array.rs  box.rs  bump_stack.rs  full.rs  hash_map.rs  pool_string.rs  priority_queue.rs
examples/C/: arena_vec.c  bounded_array.c  bump.c  full.c  hash_map.c  main.c  priority_queue.c
include/: zigzag.h  zigzag_alloc.h
src/: lib.rs  panic.rs
src/alloc/: allocator.rs  arena.rs  bump.rs  counting.rs  mod.rs  pool.rs  system.rs
src/collections/: bounded_array.rs  boxed.rs  hash_map.rs  mod.rs  priority_queue.rs  string.rs  vec.rs
src/ffi/: allocators.rs  collections.rs  mod.rs
src/simd/: aarch64.rs  fallback.rs  mod.rs  x86.rs
