[package]
name = "zigzag-alloc"
version = "1.0.3"
edition = "2024"
description = "A collection of explicit memory allocators and collections inspired by Zig"
authors = ["Maksim Bengraf <me@octobanon.com>"]
license = "MIT"
repository = "https://github.com/OctoBanon-Main/zigzag-alloc"
readme = "README.md"
keywords = [
    "zigzag-alloc",
    "no_std",
    "allocator",
    "embedded",
    "memory-management"
]
categories = ["no-std", "memory-management"]

[lib]
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
panic = "abort"

[features]
default = ["std"]
std = []
ffi = []